--- a/Dockerfile.Web
+++ b/Dockerfile.Web
@@ -1,3 +1,14 @@
+FROM node:12.2.0 as builder
+
+WORKDIR /app
+COPY WebApplicationFrontend/ .
+ENV PATH /app/node_modules/.bin:$PATH
+
+COPY WebApplicationFrontend/package.json .
+RUN npm install
+RUN npm install -g @angular/cli@7.3.9
+
+RUN ng build --prod 
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 
